# mk8dx-digit-ocr

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
mk8dx_digit_ocr/: __init__.py  digit_ocr.py
test/: test_digit_ocr.py
