[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mk8dx_digit_ocr"
version = "1.0.0"
authors = [
  { name="furaga", email="furaga.fukahori@gmail.com" },
]
description = "7 segment digit OCR for Mario Kart 8 Deluxe"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/furaga/mk8dx-digit-ocr"
"Bug Tracker" = "https://github.com/furaga/mk8dx-digit-ocr/issues"